--- a/index.html
+++ b/index.html
@@ -8,9 +8,47 @@
     <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
-    <div class="home-wrapper">
+    <div class="wrapper">
       <header class="header">
-          <img src=               
+        <nav class="header-nav">
+          <ul class="header-nav-list">
+            <li class="header-nav-list__item"><a class="header-nav-list__link" href="#">Tracker</a>
+              <ul class="header-submenu">
+                <li class="header-submenu__item"><a class="header-submenu__link" href="#">Marketing</a></li>
+                <li class="header-submenu__item"><a class="header-submenu__link" href="#">Analytics</a></li>
+              </ul>
+            </li>
+            <li class="header-nav-list__item"><a class="header-nav-list__link" href="#">Errors</a></li>
+            <li class="header-nav-list__item"><a class="header-nav-list__link" href="#">Reports</a>
+              <ul class="header-submenu">
+                <li class="header-submenu__item"><a class="header-submenu__link" href="#">Marketing</a></li>
+                <li class="header-submenu__item"><a class="header-submenu__link" href="#">Analytics</a></li>
+              </ul>
+            </li>
+            <li class="header-nav-list__item"><a class="header-nav-list__link" href="#">Statistics</a>
+              <ul class="header-submenu">
+                <li class="header-submenu__item"><a class="header-submenu__link" href="#">Marketing</a></li>
+                <li class="header-submenu__item"><a class="header-submenu__link" href="#">Analytics</a></li>
+              </ul>
+            </li>
+            <li class="header-nav-list__item"><a class="header-nav-list__link" href="#">Realtime charts</a></li>
+          </ul>
+        </nav>
+        <section class="info">
+          <ul class="info-list">
+            <li class="info-list__item">
+              <a class="info-list__link info-list__link_help" href="#">
+                <img src="./img/i_help.svg" alt="help" class="info-list__image">
+              </a>
+            </li>
+            <li class="info-list__item">
+              <a class="info-list__link info-list__link_settings" href="#">
+                <img src="./img/i_settings.svg" alt="settings" class="info-list__image">
+              </a>
+            </li>
+            <li class="info-list__item"><a class="info-list__link info-list__link_settings" href="#"></a></li>
+          </ul>
+        </section>
       </header>
     </div>
   </body>
